# nordnet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  myst.yml  pyproject.toml
.github/workflows/: update-pinned-env.yaml
nordnet/: exploration-electricity.md  exploration-gb-ie-solution.ipynb  exploration-gb-ie.ipynb  exploration-household.ipynb  exploration-sector-coupling.md  intro.md  open-tyndp.ipynb  pypsa-eur-overview.md  pypsa-intro.ipynb  pypsa-investment.ipynb  pypsa-sectors.ipynb  python-pandas.ipynb  setup.md
