[project]
name = "nordnet"
version = "2026.06.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy",
    "pandas",
    "netcdf4",
    "pypsa<1.2",
    "linopy",
    "jupyterlab",
    "cartopy",
    "matplotlib",
    "plotly",
    "graphviz",
    "jupyter-book>=2",
    "ghp-import",
    "pre-commit",
    "xarray",
]
