[project]
name = "nordnet"
version = "2026.06.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy",
    "pandas>2",
    "netcdf4",
    "pypsa<1.2",
    "linopy",
    "jupyterlab",
    "cartopy",
    "matplotlib",
    "plotly",
    "graphviz",
    "jupyter-book>=2",
    "ghp-import",
    "pre-commit",
    "xarray",
    "demandlib>=0.2.2",
    "pydeck>=0.9.2",
]
